# NikkeiMicroScope

./: .editorconfig  .gitignore  AGENTS.md  GITHUB_ACTIONS_SAFETY.md  GITHUB_AUTOMATION_INCIDENT_RESPONSE.md  GITHUB_BRANCH_PROTECTION.md  GITHUB_COMPLIANCE_REFERENCE.md  GITHUB_ISSUES_BAN.md  GITHUB_PR_MERGE_POLICY.md  GITHUB_STEWARDSHIP.md  GITHUB_TOKEN_POLICY.md  HUMAN_PLATFORM_COVENANT.md  Makefile  README.md  pyproject.toml  satellite-pack.json
.agent/: state.json
docs/: adapter-composition.md  architecture.md  code-agent-paper-trading-refinement-brief.md  core-scoring-contract.md  data-adapter-contract.md  fred-nasdaq100-adapter.md  fred-sp500-adapter.md  fred-treasury-adapter.md  fred-usdjpy-adapter.md  market-context-artifact-report.md  market-context-export.md  market-regime-score.md  paper-gate-state-validation-hardening.md  paper-gate-state-validation-implementation-note.md  paper-trading-refinement-contract.md  product-spec.md  research-plan.md  risk-policy.md  shadow-replay-integrity-checker.md  shadow-replay-integrity-ci-proof.md  shadow-replay-manifest.md  shadow-trial-close.md  shadow-trial-ledger.md  sox-source-selection.md
exports/: satellite-health.json  satellite-update-plan.json
nms/: __init__.py
scripts/: check_shadow_replay_integrity.py  close_shadow_trial.py  close_shadow_trial_dry_run.sh  compose_market_context.py  compose_market_context_dry_run.sh  create_shadow_trial.py  create_shadow_trial_dry_run.sh  export_composed_market_context.py  export_composed_market_context_dry_run.sh  fred_nasdaq100.py  fred_nasdaq100_dry_run.sh  fred_sp500.py  (+12 more)
(+44 files in other folders)
